# purchase-request-site

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  build.sh  cookies.txt  create_users.py  data_processing.py  docker-compose.yml  fly.toml  image_processing.py  lefthook.yml  logging_utils.py  main.py  mkdocs.yml  package-lock.json  package.json  ping_supabase.js  pyproject.toml  railway.json  render.yaml  requirements.txt  run-docker.sh  run.py  tailwind.config.js  vercel.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-and-deploy.yml  ci.yml  deploy-docs.yml  deploy.yml  docker-build-check.yml  supabase-activity.yml
.kiro/steering/: product.md  structure.md  tech.md
docs/: CNAME  index.md  installation.md  license.md
excel_templates/: purchase_request_template.xlsx
exports/: purchase_requests_raj_pandya_20250718_231806.xlsx
monitoring/alertmanager/: config.yml
monitoring/loki/: local-config.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
monitoring/tempo/: config.yml
purchase_request-site/: data_processing.py  google_drive.py  google_sheets.py  image_processing.py  logging_utils.py  main.py
purchase_request-site/templates/: index.html
purchase_request_site/: create_test_user.py  data_processing.py  database.py  google_auth.py  google_drive.py  google_sheets.py  image_processing.py  logging_utils.py  main.py  purchase_requests.db  request_logging.py  submission_service.py  user_info.db  user_service.py
purchase_request_site/excel_templates/: expense_report_template.xlsx  purchase_request_template.xlsx
purchase_request_site/templates/: dashboard.html  edit_profile.html  index.html  login.html  reimbursement.html  success.html  user_profile.html
src/: app_factory.py  data_processing.py  database.py  emailer.py  google_drive.py  google_sheets.py  image_processing.py  input.css  main.py  request_logging.py  user_service.py
src/core/: logging_utils.py  observability.py  settings.py
src/db/: schema.py
src/excel_templates/: expense_report_template.xlsx  expense_report_template_non_mcmaster.xlsx  purchase_request_template.xlsx
src/models/: google_auth.py  submissions.py  user_info.py  user_service.py
src/receipt_parser/: SETUP.md
src/routers/: __init__.py  auth.py  dashboard.py  download.py  error.py  home.py  profile.py  success.py  utils.py
src/templates/: 404.html  _invoice_form.html  _sentry.html  base.html  dashboard.html  edit_profile.html  error.html  login.html  success.html
static/css/: styles.css
static/js/: address-autocomplete.js
templates/: dashboard.html  index.html  reimbursement.html
tests/: conftest.py  ocr_demo.ipynb
tests/api/: test_app_routes.py  (+4 more)
(+21 files in other folders)
