[project]
name = "purchase-request-site"
version = "0.1.0"
description = "Purchase request website for McMaster Solar Car members to submit purchase requests and get reimbursements"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "google-api-python-client>=2.184.0",
    "itsdangerous>=2.2.0",
    "openpyxl>=3.1.5",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.2",
    "sqlalchemy>=2.0.44",
    "supabase>=2.22.0",
]
