[project]
name = "purchase-request-site"
version = "0.1.0"
description = "Purchase request website for McMaster Solar Car members to submit purchase requests and get reimbursements"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "google-api-python-client>=2.184.0",
    "itsdangerous>=2.2.0",
    "openpyxl>=3.1.5",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.2",
    "sqlalchemy>=2.0.44",
    "slowapi>=0.1.9",
    "sentry-sdk>=2.57.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ty>=0.0.29",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "ARG", "SIM", "TCH", "TID", "Q"]
ignore = ["E501", "B008", "C901", "ARG001", "ARG002", "SIM210", "SIM105"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
